	  has changed (needs sorting).

	* Do not allow for SILC client to create several connections to
	  several servers.  The client does not support windows right now
	  and generating multiple connections causes weird behaviour.

	  Irssi-silc client does support windows and can handle several
	  connections without problems, see: www.irssi.org and SILC plugin.

Tue Feb 13 19:55:59 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added --with-gmp configuration option.  If set the GMP
	  is always compiled in the SILC source tree.  If not set then
	  it is checked whether the system has the GMP3 installed.  If
	  it has then the GMP won't be compiled (the system's headers
	  and library is used), if it doesn't have it then the GMP is
	  compiled in the SILC source tree.

Mon Feb 12 11:20:32 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Changed RSA private exponent generation to what PKCS #1
	  suggests.  We try to find the smallest possible d by doing
	  modinv(e, lcm(phi)) instead of modinv(e, phi).  Note: this is
	  not security fix but optimization.

Sun Feb 11 18:19:51 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added new config entry [Identity] to fork the server and run
	  it as specific user and group.  A patch from Bostik.

	* Imported Dotconf configuration library into lib/dotconf.
	  This will be used to create the SILC configuration files later.
	  It will appear in the distsribution after this commit.

Sat Feb 10 21:13:45 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* A big code auditing weekend happening.  Auditing code for 
	  obvious mistakes, bugs and errors.  Also, removing any code
	  that is obsolete.

	  Removed files for being obsolete:

	  o lib/silcutil/silcbuffer.c (the buffer interface is entirely in
	  inline in the file lib/silcutil/silcbuffer.h)

	  o lib/silcutil/silcbufutil.c (the header has inline versions)

	  Changed code to fix possible error conditions:
